--- a/style.css
+++ b/style.css
@@ -1,30 +1,51 @@
 
 /* images opacity hover and border CHALLENGE 3*/
-img:hover{
-	opacity: 50%;
+
+
+body{
+	background: linear-gradient(rgb(253, 253, 253), rgb(95, 94, 94));
 }
 
-/*.logo:hover {
+img:hover{
 	opacity: 100%;
-}*/
+}
+
+.logo:hover {
+	opacity: 100%;
+}
 
 img{
 	border-radius: 3px;
+	opacity: 50%;
 }
 
-/* black and white logo CHALLENGE 3*/
-
-.cover img:first-child { 
-	filter: grayscale(100%);
-	width:70%;
-}
-
-/* Mise en place menu DEROULANT CHALLENGE 3*/
-
-h1{
+.logo{
+	border-radius: 0%;
 	text-align: center;
+	width:50%;
+	filter: drop-shadow(15px 15px 15px rgb(73, 72, 72));
+	opacity: 100%;
+}
+
+/* Mise en place menu DEROULANT*/
+
+.name{
+	text-align: center;
+	text-shadow: 2px 2px 2px #a5a7a6;
+	font-size: 50px;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+	color: linear-gradient(rgb(15, 94, 160), rgb(5, 205, 255));
 
 }
+
+.skills{
+	text-align: center;
+	font-size: 20px;
+	margin: 0px 0px;
+	padding: 0px 0px;
+}
+
 nav ul{
 	list-style-type: none;
 	padding:0;
@@ -32,12 +53,9 @@ nav ul{
    
 nav{
 	padding: 0px;
-	font-family:avenir, sans-serif;
 	width: 100%;
 	margin: 0 auto;
-	position: sticky;
-	top: 0px;
-	z-index: 1000;
+	
 }
   
 nav li{
@@ -61,12 +79,14 @@ nav a{
 }
   
 nav a:hover{
-	color: rgb(41, 151, 229);
-	border-bottom: 2px solid rgb(221, 0, 255);
+	background: -webkit-linear-gradient(rgb(125, 247, 252), rgb(14, 102, 235));
+  	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+		
 }
 .subroll{
 	display: none;
-	box-shadow: 0px 1px 2px #CCC;
+	box-shadow: 0px 0px 2px #CCC;
 	background-color: white;
 	position: absolute;
 	width: 100%;
@@ -74,8 +94,9 @@ nav a:hover{
 }
   
 .roll{
-	background-color: white;
-	box-shadow: 0px 1px 2px #CCC;
+	background: linear-gradient(rgb(255, 255, 255), rgb(190, 190, 190));
+	box-shadow: 0px 0px 2px #CCC;
+	
 }
 nav > ul li:hover .subroll{
 	display: block;
@@ -85,6 +106,7 @@ nav > ul li:hover .subroll{
 	float: none;
 	width: 100%;
 	text-align: center;
+	
 }
   
 .subroll a{
@@ -93,12 +115,8 @@ nav > ul li:hover .subroll{
 }
 .subroll a:hover{
 	border-bottom: none;
-	background-color: RGBa(200,200,200,0.1);
-}
-  
-.roll > a::after{
-	content:" ▼";
-	font-size:12px;
+	
+	
 }
   
 nav ul li{
@@ -112,8 +130,6 @@ header{
 	position: sticky;
 	top: 0px;
 	z-index: 1000;
-	background-color: white;
-	box-shadow: 0px 1px 2px #CCC;
+	box-shadow: 0px 0px 2px #CCC;
 }
-
 /* Mise en place menu DEROULANT */
