--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-
+html{
+	scroll-behavior: smooth;
+}
 /*dark mode features START*******/
 body{
 	background-color: black;
+	margin-top:0;
 }
 
 *{
@@ -9,11 +12,15 @@ body{
 }
 
 /*section cover logo et intro*/
+
+h1{
+	margin-top:0;
+
+}
 .cover{
 	display: flex;
 	flex-direction: row;
 	justify-content:space-between;
-	
 }
 
 .cover_p{
@@ -28,9 +35,21 @@ body{
 	width: 100%;
 	filter: drop-shadow(15px 15px 15px rgb(73, 72, 72));
 	opacity: 100%;
-	position:relative;
 	margin: 1%;
 	padding: 1%;
+}
+
+.logo:hover{
+	box-shadow: none;
+}
+
+.gradient-border{
+	border: solid 5px transparent;
+	border-radius: 10px;
+	background-image: linear-gradient(white, white),
+		linear-gradient(315deg,#8434ba,#629eb6 50%,#3c13e0);
+	background-origin: border-box;
+	background-clip: content-box, border-box;
 }
 
 /* Scroll Down
@@ -89,6 +108,7 @@ adjusting either .scrolldown-p1 or .scrolldown-p2 classes.*/
 
 img:hover{
 	opacity: 100%;
+	box-shadow: 10px 5px 5px rgb(205, 204, 204);
 }
 
 .logo:hover {
@@ -96,7 +116,7 @@ img:hover{
 }
 
 img{
-	border-radius: 3px;
+	border-radius: 5px;
 	opacity: 50%;
 }
 
@@ -130,7 +150,6 @@ nav a{
 	display: block;
 	text-decoration: none;
 	color: black;
-	border-bottom: 2px solid transparent;
 	padding: 10px 0px;
 }
   
@@ -138,9 +157,8 @@ nav a:hover{
 	background: -webkit-linear-gradient(rgb(125, 247, 252), rgb(14, 102, 235));
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
-  
-		
 }
+
 .subroll{
 	box-shadow: 0px 0px 2px #CCC;
 	background-color: white;
@@ -151,12 +169,16 @@ nav a:hover{
 	display:flex;
 	flex-direction:column;
 }
-  
-.roll{
+
+.roll_menu{
 	background-color: white;
-	box-shadow: 0px 0px 2px #CCC;
-	
 }
+
+.roll_menu:hover{
+	background-color: white;
+	opacity: 100%;
+}
+
 nav > ul li:hover .subroll{
 	visibility: visible;
 }
@@ -164,7 +186,6 @@ nav > ul li:hover .subroll{
 .subroll li{
 	width: 100%;
 	text-align: center;
-		
 }
   
 .subroll a{
@@ -176,7 +197,7 @@ nav > ul li:hover .subroll{
 	border-bottom: none;
 }
   
-nav ul li{ /* ici inserer display flex pour mise horizontale */
+nav ul li{
 	display: flex;
   	position: relative;
 	text-align: center;
@@ -188,7 +209,8 @@ header{
 	position: sticky;
 	top: 0px;
 	z-index: 1000;
-	
+	margin-bottom: 0;
+	margin-top: 0;
 }
 /* Mise en place menu DEROULANT */
 
@@ -220,7 +242,6 @@ header{
 
 #projets{
 	display: flex;
-	background-color: pink;
 	flex-direction: column;
 	margin: 1%;
 	padding: 1%;
@@ -231,7 +252,7 @@ header{
 	display: flex;
 	margin: 1%;
 	padding: 1%;
-	background-color: yellow;
+	
 }
 
 h3{
@@ -247,7 +268,7 @@ p{
 .projets-liste {
 	display:flex;
 	flex-direction: column;
-	background-color: aqua;
+	
 }
 
 #PJ2 .reverse {
@@ -256,7 +277,6 @@ p{
 
 .projet-desc {
 	
-	background-color: red;
 	margin: 1%;
 	padding: 1%;
 }
@@ -282,11 +302,18 @@ p{
 }
   
 #slides {
-    padding: 10px;
+    padding: 1px;
     border: 5px solid rgb(76, 78, 76);
     background: rgb(197, 197, 199);
     position: relative;
     z-index: 1;
+	
+	border: solid 5px transparent;
+	border-radius: 5px;
+	background-image: linear-gradient(white, white),
+		linear-gradient(315deg,#8434ba,#629eb6 50%,#3c13e0);
+	background-origin: border-box;
+	background-clip: content-box, border-box;
 }
   
 #overflow {
@@ -329,7 +356,7 @@ p{
 }
   
 #slides .frame_1 {
-    background: #90C;
+    background: rgb(0, 0, 0);
 }
   
 #slides .frame_2 {
@@ -398,6 +425,7 @@ url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
     border-radius: 100%;
     background: #ccc;
     margin: 0 10px;
+	
 }
   
 #frame1:checked~#bullets label:nth-child(1),
